--- a/style.css
+++ b/style.css
@@ -45,4 +45,12 @@
     border-left: 4px solid var(--cor-borda);
 }
 @midia screen and (min-width: 768px)
-{}
+{
+    .botoes{
+        display:flex;
+    }
+    .botao:first-child{
+        border-radiuns:40px 0 0 0;
+        border-top:4px solid var(--cor-borda);
+    }
+}
