--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-:root
-{
+:root {
     --cor-de-fundo: #f5f5f5;
     --preto: #000000;
     --branco: #FFFFFF;
@@ -8,7 +7,8 @@
     --texto-fundo: #87CEFA;
     --cor-borda: #000000;
 }
-.conteudo-principal{
+
+.conteudo-principal {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,16 +17,18 @@
     width: 100%;
     margin: 0 auto;
 }
-.titulo-principal{
+
+.titulo-principal {
     text-align: center;
     width: 100%;
     font-size: 32px;
     color: var(--preto);
 }
+
 .botao {
     background-color: var(--botao-inativo);
     color: var(--branco);
-    display:flex ;
+    display: flex;
     justify-content: center;
     padding: 1em;
     font-size: 18px;
@@ -37,20 +39,50 @@
     border-right: 2px solid var(--cor-borda);
     border-top: 4px solid var(--cor-borda);
 }
-.botoes{
+
+.botoes {
     display: block;
 }
-.botao:first-child{
+
+.botao:first-child {
     border-radius: 40px 40px 0 0;
     border-left: 4px solid var(--cor-borda);
 }
-@midia screen and (min-width: 768px)
+
+@midia screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+
+    .botao:first-child {
+        border-radiuns: 40px 0 0 0;
+        border-top: 4px solid var(--cor-borda);
+    }
+
+    .botao:first-child {
+        border-radius: 0 40px 0 0 0;
+        border-right: 4px solid var(--cor-borda);
+    }
+}
+body{
+    background-color: var(--botao-ativo);
+}
+.botao.ativo
 {
-    .botoes{
-        display:flex;
-    }
-    .botao:first-child{
-        border-radiuns:40px 0 0 0;
-        border-top:4px solid var(--cor-borda);
-    }
+    background-color: var(--botao-ativo);
+    color: #000000;
+}
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+    border-bottom: 4px solid var(--cor-borda);
+    border-right: 4px solid var(--cor-borda);
+    border-left: 4px solid var(--cor-borda);
+}
+.aba-conteudo.ativo{
+    display: block;
+}
+.aba-conteudo{
+    display: none;
 }
