--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     border-bottom: 4px solid var(--cor-borda);
     border-left: 2px solid var(--cor-borda);
     border-right: 2px solid var(--cor-borda);
-    border-top: 4px solid var(--botao-inativo);
+    border-top: 4px solid var(--cor-borda);
 }
 
 .botoes {
