--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 .botao {
     background-color: var(--botao-inativo);
-    color: var(--botao-inativo);
+    color: var(--branco);
     display: flex;
     justify-content: center;
     padding: 1em;
