--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --botao-inativo: #FF00FF;
     --texto-fundo: #87CEFA;
     --cor-borda: #000000;
+    --meu-fundo: #E0FFFF;
 }
 
 .conteudo-principal {
