--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --botao-inativo: #FF00FF;
     --texto-fundo: #87CEFA;
     --cor-borda: #000000;
-    --meu-fundo: 	#E6E6FA;
+    --meu-fundo:	#D8BFD8;
 }
 
 .conteudo-principal {
