--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-:root {
+.madimi-one-regular {
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  :root {
     --cor-de-fundo: #f5f5f5;
     --preto: #000000;
     --branco: #FFFFFF;
