--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
     width: 100%;
     font-size: 32px;
     color: var(--preto);
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
 }
 
 .botao {
