--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     --cor-de-fundo: #f5f5f5;
     --preto: #000000;
     --branco: #FFFFFF;
-    --botao-ativo: #A020F0;
-    --botao-inativo: #FF00FF;
+    --botao-ativo:#4B0082;
+    --botao-inativo: #836FFF;
     --texto-fundo: #87CEFA;
     --cor-borda: #000000;
     --meu-fundo:	#D8BFD8;
