--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --branco: #FFFFFF;
     --botao-ativo:#4B0082;
     --botao-inativo: #836FFF;
-    --texto-fundo: #87CEFA;
+    --texto-fundo: #FFC0CB;
     --cor-borda: #000000;
     --meu-fundo:	#D8BFD8;
 }
