--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --botao-inativo: #836FFF;
     --texto-fundo: #FFC0CB;
     --cor-borda: #000000;
-    --meu-fundo:		#E0FFFF;
+    --meu-fundo:	#D8BFD8;
 }
 
 .conteudo-principal {
