--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 .abas-textos {
-    background-color: var(--texto-fundo);
+    background-color: green;
     padding: 40px;
     border-radius: 0 0 40px 40px;
     border-bottom: 4px solid var(--cor-borda);
